# xquic

./: .gitignore  .gitmodules  CMakeLists.txt  build-android.py  build-ios.py  build-win.py  build_util.py
cmake/: CMakeLists.txt  iwBasic.cmake
cmake/finds/: FindCUnit.cmake
cmake/modules/: iwSetPolicy.cmake
demo/: CMakeLists.txt  XquicWrapper.h  common.c  common.h  demo_client.c  demo_server.c
include/xquic/: xqc_configure.h  xqc_errno.h  xqc_http3.h  xquic.h  xquic_typedef.h
scripts/: to-block-comment.py
src/common/: xqc_malloc.h
src/common/utils/vint/: xqc_variable_len_int.h
src/congestion_control/: xqc_copa.c
src/http3/: xqc_h3_conn.c  xqc_h3_request.c  xqc_h3_stream.c  xqc_h3_stream.h
src/transport/: xqc_conn.c  xqc_conn.h  xqc_engine.c  xqc_fec.c  xqc_frame.c  xqc_frame.h  xqc_send_ctl.c  xqc_transport_params.h
src/transport/fec_schemes/: xqc_galois_calculation.h
tests/: CMakeLists.txt  platform.h  test_client.c  test_server.c
